--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@ body {
   /* Add shadows to create the "card" effect */
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
+  padding: 15px;
 }
 
 /* On mouse-over, add a deeper shadow */
@@ -23,10 +24,11 @@ body {
 
 #logo {
   height: 50px;
+  padding: 10px;
 }
 
 #logoText {
-  font-size: 30px;
+  font-size: 25px;
 }
 
 .navbar-brand {
@@ -110,6 +112,7 @@ body {
   border: black;
   border-width: 10px;
   z-index: 1;
+  padding-top: 10px;
 }
 
 #dateLabel1,
